<resources>
    <!--    Main Activity-->
    <string name="app_name">App360</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="skip">Skip</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_placeholder">Title</string>
    <string name="news_placeholder">News</string>
    <string name="sports_info_placeholder">Here is some news</string>

    <string-array name="member_names">
        <item>Ayesha</item>
        <item>Kishan</item>
        <item>Priyanka</item>
        <item>Vedant</item>
        <item>Sushant</item>
        <item>Ajit</item>
        <item>Vinayak</item>
        <item>Shubham</item>
        <item>Astha</item>
        <item>Vamsi</item>
        <item>Pritish</item>
    </string-array>

    <string-array name="classroom_info">
        <item>App360</item>
        <item>App360</item>
        <item>App360</item>
        <item>App360</item>
        <item>App360</item>
        <item>App360</item>
        <item>App360</item>
        <item>App360</item>
        <item>App360</item>
        <item>App360</item>
        <item>App360</item>
    </string-array>

    <string-array name="questions">
        <item>This is a sample question. Answer the questiion in detailed explanation.</item>
        <item>This is a sample question</item>
        <item>This is a sample question</item>
        <item>This is a sample question</item>
        <item>This is a sample question</item>
        <item>This is a sample question</item>
        <item>This is a sample question</item>
        <item>This is a sample question</item>
        <item>This is a sample question</item>
        <item>This is a sample question</item>
        <item>This is a sample question</item>
    </string-array>

    <string-array name="questions_postedby">
        <item>Ayesha</item>
        <item>Kishan</item>
        <item>Priyanka</item>
        <item>Vedant</item>
        <item>Sushant</item>
        <item>Ajit</item>
        <item>Vinayak</item>
        <item>Shubham</item>
        <item>Astha</item>
        <item>Vamsi</item>
        <item>Pritish</item>
    </string-array>

    <string name="supporting">Greyhound divisively hello coldly wonderfully marginally far upon excluding.</string>
    <string name="title">Title</string>
    <string name="subhead">Subhead</string>
    <string name="primary">Title goes here</string>
    <string name="primary_short">Title here</string>
    <string name="subtext">Subtitle here</string>
    <string name="action_1">Action 1</string>
    <string name="action_2">Action 2</string>
    <string name="expanded_supporting">I\'m a thing. But, like most politicians, he promised more than he could deliver. You won\'t have time for sleeping, soldier, not with all the bed making you\'ll be doing. Then we\'ll go with that data file! Hey, you add a one and two zeros to that or we walk! You\'re going to do his laundry? I\'ve got to find a way to escape.</string>
    <string name="post_a_question">Post a Question</string>
    <string name="invitations">Invitations</string>
    <string name="show_more">Show More</string>
    <string name="questions">Questions</string>
    <string name="header_title">Mr. Wide</string>
    <string name="header_text">Instructor</string>
    <string name="title_1">Downloads</string>
    <string name="title_2">Bookmarks</string>
    <string name="title_3">Notifications</string>
    <string name="item_4">FAQ</string>
    <string name="item_5">App Version</string>
    <string name="item_6">Logout</string>
    <string name="category">Category</string>
    <string name="more"><![CDATA[More >>]]></string>
    <string name="signup">SignUp</string>
    <string name="login">Login</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="login_title">Login to your account</string>
    <string name="e_mail_address">E-Mail Address</string>
    <string name="password">Password</string>
    <string name="click_to_login">Submit</string>
    <string name="signup_title">Easy SignUp</string>
    <string name="create_account">Create Account</string>
    <string name="title_activity_more">MoreActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_data_detail">DataDetailActivity</string>
    <string name="home">Home</string>
    <string name="account">Account</string>


    <string name="wideclassrooms">WideClassrooms</string>
    <string name="video">Play</string>
    <string name="my_account">My Account</string>
    <string name="videos">Videos</string>
    <string name="bookmark">Bookmarks</string>
</resources>